--- a/gpunit/nightly_test.yaml
+++ b/gpunit/nightly_test.yaml
@@ -20,22 +20,39 @@
 #T = cell2table(taskInfos);
 #writetable(T,'dataRecon22_local_minmaxmean_value.taskInfo.csv');
 
-name: local_minmaxmean_value
+##name: local_minmaxmean_value
+##module: CellFie
+##params:
+##    "InputData": "input/dataTest.csv"
+##    "SampleNumber": 3
+##    "ReferenceModel": "MT_recon_2_2_entrez.mat"
+##    "ThreshType": "local"
+##    "PercentileOrValue": "value"
+##    "LocalThresholdType": "minmaxmean"
+##    "ThresholdLowerBound": 25
+##    "ThresholdUpperBound": 75
+
+##assertions:
+##    jobStatus: success
+##    files:
+##        "score.csv":
+##            diff: "output/dataRecon22_local_minmaxmean_value.score.csv"
+##        "score_binary.csv":
+##            diff: "output/dataRecon22_local_minmaxmean_value.score_binary.csv"
+
+name: cellfie_nightly_test
 module: CellFie
 params:
-    "InputData": "input/dataTest.csv"
-    "SampleNumber": 3
-    "ReferenceModel": "MT_recon_2_2_entrez.mat"
-    "ThreshType": "local"
-    "PercentileOrValue": "value"
-    "LocalThresholdType": "minmaxmean"
-    "ThresholdLowerBound": 25
-    "ThresholdUpperBound": 75
+    "Data": "input/dataTest.csv"
+    "Sample.Number": 3
+    "Reference.Model": "MT_recon_2_2_entrez"
+    "Thresholding.Approach": "local"
+    "Percentile.Or.Value": "percentile"
+    "Global.Cutoff": 0
+    "Local.Threshold.Type": "minmaxmean"
+    "Local.Lower.Bound": 25
+    "Local.Upper.Bound": 75
 
 assertions:
     jobStatus: success
-    files:
-        "score.csv":
-            diff: "output/dataRecon22_local_minmaxmean_value.score.csv"
-        "score_binary.csv":
-            diff: "output/dataRecon22_local_minmaxmean_value.score_binary.csv"
+    numFiles: 6
