--- a/gpunit/local_mean.yaml
+++ b/gpunit/local_mean.yaml
@@ -20,11 +20,11 @@
 name: local_mean
 module: CellFie
 params:
-    "InputData": "input/dataTest.csv"
-    "SampleNumber": 3
-    "ReferenceModel": "MT_recon_2_2_entrez.mat"
-    "ThreshType": "local"
-    "LocalThresholdType": "mean"
+    "Data": "input/dataTest.csv"
+    "Sample.Number": 3
+    "Reference.Model": "MT_recon_2_2_entrez.mat"
+    "Thresholding.Approach": "local"
+    "Local.Threshold.Type": "mean"
     job.memory: "8 Gb"
 
 assertions:
