--- a/gpunit/global_percentile.yaml
+++ b/gpunit/global_percentile.yaml
@@ -18,12 +18,12 @@
 name: global_percentile
 module: CellFie
 params:
-    "InputData": "input/dataTest.csv"
-    "SampleNumber": 3
-    "ReferenceModel": "MT_recon_2_2_entrez.mat"
-    "ThreshType": "global"
-    "PercentileOrValue": "percentile"
-    "ThresholdLowerBound": 50
+    "Data": "input/dataTest.csv"
+    "Sample.Number": 3
+    "Reference.Model": "MT_recon_2_2_entrez.mat"
+    "Thresholding.Approach": "global"
+    "Percentile.Or.Value": "percentile"
+    "Local.Lower.Bound": 50
 
 assertions:
     jobStatus: success
