--- a/gpunit/local_minmaxmean_value.yaml
+++ b/gpunit/local_minmaxmean_value.yaml
@@ -25,7 +25,7 @@ module: CellFie
 params:
     "Data": "input/dataTest.csv"
     "Sample.Number": 3
-    "Reference.Model": "MT_recon_2_2_entrez.mat"
+    "Reference.Model": "Human_recon_2_2"
     "Thresholding.Approach": "local"
     "Percentile.Or.Value": "value"
     "Local.Threshold.Type": "minmaxmean"
