--- a/gpunit/global_percentile.yaml
+++ b/gpunit/global_percentile.yaml
@@ -20,7 +20,7 @@ module: CellFie
 params:
     "Data": "input/dataTest.csv"
     "Sample.Number": 3
-    "Reference.Model": "MT_recon_2_2_entrez.mat"
+    "Reference.Model": "Human_recon_2_2"
     "Thresholding.Approach": "global"
     "Percentile.Or.Value": "percentile"
     "Local.Lower.Bound": 50
