--- a/gpunit/global_value.yaml
+++ b/gpunit/global_value.yaml
@@ -23,7 +23,7 @@ module: CellFie
 params:
     "Data": "input/dataTest.csv"
     "Sample.Number": 3
-    "Reference.Model": "MT_recon_2_2_entrez.mat"
+    "Reference.Model": "Human_recon_2_2"
     "Thresholding.Approach": "global"
     "Percentile.Or.Value": "value"
     "Local.Lower.Bound": 50
