--- a/gpunit/nightly_test.yaml
+++ b/gpunit/nightly_test.yaml
@@ -45,7 +45,7 @@ module: CellFie
 params:
     "Data": "input/dataTest.csv"
     "Sample.Number": 3
-    "Reference.Model": "MT_recon_2_2_entrez"
+    "Reference.Model": "Human_recon_2_2"
     "Thresholding.Approach": "local"
     "Percentile.Or.Value": "percentile"
     "Global.Cutoff": 0
