--- a/gpunit/local_minmaxmean_value.yaml
+++ b/gpunit/local_minmaxmean_value.yaml
@@ -35,7 +35,10 @@ params:
 assertions:
     jobStatus: success
     files:
-        "score.csv":
-            diff: "output/dataRecon22_local_minmaxmean_value.score.csv"
-        "score_binary.csv":
-            diff: "output/dataRecon22_local_minmaxmean_value.score_binary.csv"
+    files:
+        "detail_scoring":
+            diff: "output/dataRecon22_local_minmaxmean_value.detailScoring.csv"
+        "mat":
+            diff: "output/dataRecon22_local_minmaxmean_value.mat"
+        "task_info":
+            diff: "output/dataRecon22_local_minmaxmean_value.taskInfo.csv"
