--- a/gpunit/global_value.yaml
+++ b/gpunit/global_value.yaml
@@ -32,9 +32,9 @@ params:
 assertions:
     jobStatus: success
     files:
-        "detail_scoring":
+        "detailScoring.csv":
             "diff": "output/dataRecon22_global_value.detailScoring.csv"
-        "mat":
+        "cellfieout.mat":
             diff: "output/dataRecon22_global_value.mat"
-        "task_info":
+        "taskInfo.csv":
             diff: "output/dataRecon22_global_valuetaskInfo.csv"
