--- a/gpunit/local_mean.yaml
+++ b/gpunit/local_mean.yaml
@@ -30,9 +30,9 @@ params:
 assertions:
     jobStatus: success
     files:
-        "detail_scoring":
+        "detailScoring.csv":
             diff: "output/dataRecon22_local_mean.detailScoring.csv"
-        "mat":
+        "cellfieout.mat":
             diff: "output/dataRecon22_local_mean.mat"
-        "task_info":
+        "taskInfo.csv":
             diff: "output/dataRecon22_local_mean.taskInfo.csv"
