--- a/gpunit/local_minmaxmean_value.yaml
+++ b/gpunit/local_minmaxmean_value.yaml
@@ -36,9 +36,9 @@ assertions:
     jobStatus: success
     files:
     files:
-        "detail_scoring":
+        "detailScoring.csv":
             diff: "output/dataRecon22_local_minmaxmean_value.detailScoring.csv"
-        "mat":
+        "cellfieout.mat":
             diff: "output/dataRecon22_local_minmaxmean_value.mat"
-        "task_info":
+        "taskInfo.csv":
             diff: "output/dataRecon22_local_minmaxmean_value.taskInfo.csv"
