--- a/gpunit/global_value.yaml
+++ b/gpunit/global_value.yaml
@@ -26,7 +26,7 @@ params:
     "Reference.Model": "Human_recon_2_2"
     "Thresholding.Approach": "global"
     "Percentile.Or.Value": "value"
-    "Local.Lower.Bound": 50
+    "Global.Cutoff": 50
     job.memory: "8 Gb"
 
 assertions:
