switch back to score diff

--- a/gpunit/local_mean.yaml
+++ b/gpunit/local_mean.yaml
@@ -30,8 +30,10 @@ params:
 assertions:
     jobStatus: success
     files:
-        "detailScoring.csv":
-            diff: "output/dataRecon22_local_mean.detailScoring.csv"
+        #"detailScoring.csv":
+        #    diff: "output/dataRecon22_local_mean.detailScoring.csv"
+        "score.csv":
+            diff: "output/dataRecon22_local_mean.score.csv"
         "cellfieout.mat":
             diff: "output/dataRecon22_local_mean.mat"
         "taskInfo.csv":
