--- a/gpunit/global_percentile.yaml
+++ b/gpunit/global_percentile.yaml
@@ -28,8 +28,10 @@ params:
 assertions:
     jobStatus: success
     files:
-        "detailScoring.csv":
-            diff: "output/dataRecon22_global_percentile.detailScoring.csv"
+        #"detailScoring.csv":
+        #    diff: "output/dataRecon22_global_percentile.detailScoring.csv"
+        "score.csv":
+            diff: "output/dataRecon22_global_percentile.score.csv"
         "cellfieout.mat":
             diff: "output/dataRecon22_global_percentile.mat"
         "taskInfo.csv":
