--- a/gpunit/local_minmaxmean_value.yaml
+++ b/gpunit/local_minmaxmean_value.yaml
@@ -36,11 +36,7 @@ assertions:
     jobStatus: success
     files:
     files:
-        #"detailScoring.csv":
-        #    diff: "output/dataRecon22_local_minmaxmean_value.detailScoring.csv"
         "score.csv":
             diff: "output/dataRecon22_local_minmaxmean_value.score.csv"
-        "cellfieout.mat":
-            diff: "output/dataRecon22_local_minmaxmean_value.mat"
-        "taskInfo.csv":
-            diff: "output/dataRecon22_local_minmaxmean_value.taskInfo.csv"
+        "score_binary.csv":
+            diff: "output/dataRecon22_local_minmaxmean_value.score_binary.csv"
